// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component FileUploadTermsAndConditions should render checked if terms and conditions accepted 1`] = `
<WithStyles(FormControlLabel)
  classes={
    Object {
      "root": undefined,
    }
  }
  control={
    <WithStyles(Checkbox)
      checked={true}
      classes={
        Object {
          "checked": undefined,
          "root": undefined,
        }
      }
      onChange={[Function]}
    />
  }
  disabled={false}
  label={
    <WithStyles(Typography)
      classes={
        Object {
          "root": Object {
            "textAlign": "justify",
          },
        }
      }
      color="secondary"
    />
  }
/>
`;

exports[`Component FileUploadTermsAndConditions should render default view 1`] = `
<WithStyles(FormControlLabel)
  classes={
    Object {
      "root": undefined,
    }
  }
  control={
    <WithStyles(Checkbox)
      checked={false}
      classes={
        Object {
          "checked": undefined,
          "root": undefined,
        }
      }
      onChange={[Function]}
    />
  }
  disabled={false}
  label={
    <WithStyles(Typography)
      classes={
        Object {
          "root": Object {
            "textAlign": "justify",
          },
        }
      }
      color="error"
    />
  }
/>
`;
